- Status of zone's proxy node now used in "node down" event correlation
- Configurable default DCI retention time and polling interval
- New NXSL functions: CreateNode, GetSumDCIValue
- New NXSL operator @ - safe get object's attribute
- New MIBs added: ASTARO-MIB, CPQHOST-MIB, CPQPOWER-MIB
- Special support for wireless switches
- Driver for Motorola/Symbol wireless switches
- Fixed export bugs in database manager
- New parameters for Windows Security Center provided by WMI subagent:
	System.AntiSpywareProduct.Active
	System.AntiSpywareProduct.DisplayName
	System.AntiSpywareProduct.UpToDate
	System.AntiVirusProduct.Active
	System.AntiVirusProduct.DisplayName
	System.AntiVirusProduct.UpToDate
	System.FirewallProduct.Active
	System.FirewallProduct.DisplayName
	System.FirewallProduct.UpToDate
- Management console:
	- "Export to CSV" option added to most tabular data views
	- Auto login option for web console
- Fixed issues: #86, #199, #242, #249, #250, #251, #275


*
* 1.2.6
*

- DCI instance discovery
- nxshell: Python-based client-side scripting
- Array initializers in NXSL
- NXSL function PostEvent can use event names instead of event codes
- New NXSL functions: AgentReadParameter, CreateDCI, ManageObject, 
  SetInterfaceExpectedState, UnmanageObject
- Management console:
	- Network map functionality in web console now in sync with desktop version
	- Alarm details view improved
	- Configurable chart ordering on performance tab
	- Syslog parser editor working correctly
- Android Console:
	- Force reconnection after changing settings (#241)
	- Fixed bug in showing predefined graphs and dashboards (#239)
	- Added support for mobile device objects
	- Added geolocation info in overview tab
- 64bit interface counters in Windows agent
- Improved LLDP support
- Driver for D-Link switches
- Event parameters passed as arguments to action scripts
- PING subagent: targets can be specified using DNS names
- Android Agent: